# rhodes

./: readme.md
ext/alazartech/ATS-SDK/7.1.5/: ReadMe.htm
ext/cyapi/glv_driver/: win10_disable_driver_sign_enf.cmd  win10_enable_driver_sign_enf.cmd
ext/cyapi/lib/x64/: CyAPI.lib
ext/cyapi/lib/x86/: CyAPI.lib
ext/glv/Cosmo-Downloader/: Readme-Cosmo-Downloader.txt
ext/glv/Custom firmwares/FX3/: COSMO_FX3_20171225.img
ext/glv/Custom firmwares/PSOC/: COSMO_build1083.srec  COSMO_build1099.srec
ext/spdlog/: README.md
ext/spdlog/cmake/: utils.cmake
scripts/: deploy_iris_win.cmd
src/: win_x64_configs.props
src/apps/: win_apps.props
src/apps/iris/: iris.cpp  iris.h  iris.sln  iris.vcxproj  iris.vcxproj.filters  main.cpp
src/apps/iris/matlab/: .gitignore
src/embedded/microzed/: readme.md
src/libs/: win_libs.props
src/libs/alazar_daq/: alazar_daq.cpp  alazar_daq.h  alazar_daq.sln  alazar_daq.vcxproj  alazar_daq.vcxproj.filters  ats9350_npt_test.cpp  ats9350_npt_test.vcxproj  ats9350_npt_test.vcxproj.filters
src/libs/core0/: CMakeLists.txt  api_export.h  core0.vcxproj  core0.vcxproj.filters  endianness.h  log.h  readme.md  types.h
src/libs/core2/: core2.vcxproj  core2.vcxproj.filters  hpc.cpp  hpc.h  readme.md
src/libs/glv/: glv.cpp  glv.h  glv.sln  glv.vcxproj  glv.vcxproj.filters  glv_test.cpp  glv_test.vcxproj  glv_test.vcxproj.filters
src/libs/serialport/: CMakeLists.txt  serialport.cpp  serialport.h  serialport.sln  serialport.vcxproj  serialport.vcxproj.filters  serialport_test.cpp  serialport_test.vcxproj  serialport_test.vcxproj.filters
(+1044 files in other folders)
